# sandpile-model

./: CMakeLists.txt  README.md  task.md
src/: CMakeLists.txt  main.cpp
src/bmp/: BmpWriter.cpp  BmpWriter.hpp  CMakeLists.txt
src/model/: CMakeLists.txt  Grid.cpp  Grid.hpp  Sandpile.cpp  Sandpile.hpp
src/parsing/: CMakeLists.txt  argparsing.cpp  argparsing.hpp  tsv_parsing.cpp  tsv_parsing.hpp  utils.hpp
